--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
     <h1>The 2048 game</h1>
     <h3>To start the game press any arrow key on your keyborad and use them to merge cells to get to 2048 points! Good luck</h3>
+    <h4>Hint: to restart the game press 'Restart Game' and reload the page</h4>
     <table id="matrix"></table>
+    <button id="restart-btn">Restart Game</button>
     <script src="app.js"></script>
 </body>
 </html>
